# re-flora

./: .clang-format  .gitignore  CLAUDE.md  CLAUDE_GOAL.md  Cargo.toml  PLAN.md  README.md  build.rs  fora_audio_impl_guide.md  format_all.bat  rustfmt.toml
.claude/: aw.md  settings.json  settings.local.json
.claude/commands/: check.md  code.md  commit.md
assets/hrtf/: README.md  hrtf_b_nh172.sofa
assets/sfx/: README.md
docs/: NVIDIA GeForce RTX 3060 Ti.json
fora_audio/: Cargo.toml  README.md
misc/test_env/: download_hrtf.py  normal_check.py  out.hdr  requirements.txt  test.py  voxelize_tree.py
resource_container_derive/: Cargo.toml
resource_container_derive/src/: lib.rs
shader/: test.comp  tracer.comp
shader/acc_struct/: instance_maker.comp  make_unit_grass.comp  unit_cube_maker.comp  vert_maker.comp
shader/builder/: chunk_init.comp  field_construction.comp  frag_list_maker.comp  octree_alloc_node.comp  octree_init_buffers.comp  octree_init_node.comp  octree_modify_args.comp  octree_tag_node.comp  raw_tex_to_buf.comp  voxel_creation.comp
shader/denoiser/: spatial.comp  temporal.comp
shader/egui/: egui.frag  egui.vert
shader/foliage/: billboard.glsl  flora.vert  flora_lod.vert  foliage.frag  foliage.vert  grass.vert  lavender.vert  leaves.frag  leaves.vert  leaves_lod.vert  leaves_shadow.vert  shadow.vert  unpacker.glsl  wind.glsl
shader/include/: block_type_packer.glsl  block_types.glsl  builder_structs.glsl  bvh.glsl  bvh_svo_marching.glsl  cascaded_marching.glsl  config.glsl  contree_marching.glsl  contree_node.glsl  dda_marching.glsl  dda_scene_marching.glsl  dda_scene_marching_result.glsl  dda_svo_marching.glsl  frag_elements_registry.glsl  frag_list_entry.glsl  fragment_list_entry.glsl  grass_color.glsl  grass_instance.glsl  grass_type.glsl  instance.glsl  marching_result.glsl  noise_tex.glsl  pcss.glsl  rand.glsl  ray.glsl  seascape.glsl  skylight.glsl  starlight.glsl  svo_marching.glsl  vertex_index_attribute.glsl  voxel_color.glsl  voxel_colors.glsl  voxel_registry.glsl  voxel_type.glsl  voxel_types.glsl  vsm.glsl
shader/tracer/: composition.comp  god_ray.comp  god_ray_temporal.comp  player_collider.comp  post_processing.comp  taa.comp  terrain_query.comp  tracer.comp  tracer_shadow.comp  vsm_blur_h.comp  vsm_blur_v.comp  vsm_creation.comp  vsm_filtering.glsl
src/: main.rs
src/app/: app.rs  app_controller.rs  core.rs  initialized_app.rs  mod.rs
src/audio/: audio_buffer.rs  audio_clip_cache.rs  audio_decoder.rs  audio_engine.rs  audionimbus_test.rs  clip_cache.rs  clip_loader.rs  mod.rs  pal.rs  sound_clip.rs  source_clustering.rs  spatial_sound.rs  spatial_sound_calculator.rs  spatial_sound_manager.rs  sym.rs  tree_audio_manager.rs
src/builder/: builder.rs  chunk.rs  chunk_data_builder.rs  chunk_writer.rs  frag_list_builder.rs  mod.rs  octree_builder.rs  resources.rs
src/egui_renderer/: allocator.rs  buffer.rs  frames.rs  mesh.rs  mod.rs  renderer.rs  texture.rs
src/gameplay/: camera.rs  mod.rs
src/geom/: aabb.rs  bvh.rs  mod.rs
src/procedual_placer/: mod.rs
src/renderer/: buffer.rs  error.rs  mesh.rs  mod.rs  renderer.rs  texture.rs  vulkan.rs
src/resource/: mod.rs
src/shader_util/: compiler.rs  load.rs  mod.rs
src/tracer/: buffer_updater.rs  denoiser_resources.rs  extent_dependent_resources.rs  flora_construct.rs  grass_construct.rs  leaves_construct.rs  mod.rs  pipeline_builder.rs  resources.rs  tracer.rs  vertex.rs  voxel_encoding.rs  voxel_geometry.rs
src/tree_gen/: tree.rs
src/util/: bench.rs  compiler.rs  merge_with_eq.rs  mod.rs  path.rs  sun_dir.rs  time_info.rs  timer.rs  tt.rs
src/vkn/: allocator.rs  barrier.rs  buffer.rs  command_buffer.rs  command_pool.rs  compute_pipeline.rs  context.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  extent.rs  fence.rs  image.rs  instance.rs  mod.rs  physical_device.rs  pipeline.rs  pipeline_layout.rs  queue.rs  render_pass.rs  render_target.rs  semaphore.rs  shader.rs  shader_compiler.rs  surface.rs  swapchain.rs  (+2 more)
(+183 files in other folders)
