[package]
name = "re-flora"
version = "0.1.0"
edition = "2021"

[dependencies]

# https://github.com/ash-rs/ash
ash = { version = "0.38", default-features = false, features = [
    "debug",
    "linked",
    "std",
] }

winit = { version = "0.30", features = ["rwh_05"] }

gpu-allocator = "0.27"
ash-window = "0.13"
simple_logger = "5.0"
comfy-table = "7.1.3"
log = "0.4.25"
time = "0.3.37"
egui = "0.31.0"
thiserror = "2.0.11"
egui-winit = "0.31.0"
egui_demo_lib = "0.31.0"
shaderc = "0.8.3"
glam = "0.30.0"

# the last release is from 2019, so we use the git version for support of the latest spirv-reflect
spirv-reflect = { git = "https://github.com/gwihlidal/spirv-reflect-rs.git", rev = "97298067e3b1c9ce05633d78f1183c14a3cc6acc" }
noise = "0.9.0"
rand = "0.9.0"
ordered-float = "5.0.0"
once_cell = "1.21.3"
indexmap = "2.9.0"
image = "0.25.6"
fastnoise-lite = "1.1.1"

[features]
default = []
no_validation_layer = []

[build-dependencies]
shaderc = "0.8.3"

[profile.test]
# inherits = "release"
