[package]
name = "re-flora"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["fora_audio"]
resolver = "3"

[dependencies]
resource_container_derive = { path = "./resource_container_derive" }
fora_audio = { path = "fora_audio" }
ash = { version = "0.38", default-features = false, features = [
    "debug",
    "linked",
    "std",
] }
winit = { version = "0.30", features = ["rwh_05"] }
chrono = { version = "0.4", features = ["clock"] }
# only enable debug assert for glam during debug builds
glam = { version = "0.30.0", features = ["debug-glam-assert", "bytemuck"] }
uuid = { version = "1.4", features = ["v4"] }
# the last release is from 2019, so we use the git version for support of the latest spirv-reflect
spirv-reflect = { git = "https://github.com/gwihlidal/spirv-reflect-rs.git", rev = "97298067e3b1c9ce05633d78f1183c14a3cc6acc" }

gpu-allocator = "0.27"
ash-window = "0.13"
env_logger = "0.11"
comfy-table = "7.1.3"
log = "0.4.25"
time = "0.3.37"
egui = "0.32.0"
thiserror = "2.0.11"
egui-winit = "0.32.0"
shaderc = "0.8.3"
noise = "0.9.0"
rand = "0.9.0"
ordered-float = "5.0.0"
once_cell = "1.21.3"
indexmap = "2.9.0"
image = "0.25.6"
anyhow = "1.0.98"
kira = "0.10.8"
bytemuck = "1.23.1"
petalsonic = "0.2"
# or use a local development version
# petalsonic = { path = "../petalsonic/petalsonic" }

[features]
default = []
no_validation_layer = []

[build-dependencies]
shaderc = "0.8.3"

[profile.test]
# uncomment this line to use release build for tests
# inherits = "release"
